--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 
 <body onload="main()">
-    <canvas width="1920" height="1080" id="myCanvas">
-    </canvas>
+    <div style="display: flex; justify-content: center;">
+		<h1 style="color:#555555;">Bayu Adjie Sidharta / 05111940000172</h1>
+	</div>
+	<div style="display: flex; justify-content: center;">
+		<canvas id="myCanvas" width="1600" height="800">
+		</canvas>
+	</div>
 </body>
 
 </html>
