--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menggambar Titik | Grafika Komputer A</title>
-    <link rel="stylesheet" href="/1titik/styles.css">
     <script src="./main.js"></script>
     <script src="./ktm.js"></script>
 </head>
 
 <body onload="main()">
-    <canvas width="1920" height="1080" id="myCanvas">
-    </canvas>
+    <div style="display: flex; justify-content: center;">
+		<h1 style="color:#555555;">Bayu Adjie Sidharta / 05111940000172</h1>
+	</div>
+	<div style="display: flex; justify-content: center;">
+		<canvas id="myCanvas" width="1600" height="800">
+		</canvas>
+	</div>
 </body>
 
 </html>
